
= ruote-dm - CHANGELOG.txt


== ruote-dm 2.1.6    not yet released
