@@ -1,7 +1,7 @@
 
 module Ruote
 module Dm
-  VERSION = '2.1.6'
+  VERSION = '2.1.7'
 end
 end
 
