@@ -5,12 +5,12 @@
 
 Gem::Specification.new do |s|
   s.name = %q{ruote-dm}
-  s.version = "2.1.6"
+  s.version = "2.1.7"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["John Mettraux"]
-  s.date = %q{2010-02-08}
-  s.description = %q{datamapper storage for ruote 2.1}
+  s.date = %q{2010-02-12}
+  s.description = %q{datamapper storage for ruote (a ruby workflow engine)}
   s.email = %q{jmettraux@gmail.com}
   s.extra_rdoc_files = [
     "LICENSE.txt",
@@ -35,7 +35,7 @@ Gem::Specification.new do |s|
   s.require_paths = ["lib"]
   s.rubyforge_project = %q{ruote}
   s.rubygems_version = %q{1.3.5}
-  s.summary = %q{datamapper storage for ruote 2.1}
+  s.summary = %q{datamapper storage for ruote (a ruby workflow engine)}
   s.test_files = [
     "test/test.rb"
   ]
@@ -45,18 +45,21 @@ Gem::Specification.new do |s|
     s.specification_version = 3
 
     if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
-      s.add_runtime_dependency(%q<ruote>, [">= 2.1.6"])
+      s.add_runtime_dependency(%q<ruote>, [">= 2.1.7"])
       s.add_runtime_dependency(%q<dm-core>, [">= 0"])
       s.add_development_dependency(%q<yard>, [">= 0"])
+      s.add_development_dependency(%q<jeweler>, [">= 0"])
     else
-      s.add_dependency(%q<ruote>, [">= 2.1.6"])
+      s.add_dependency(%q<ruote>, [">= 2.1.7"])
       s.add_dependency(%q<dm-core>, [">= 0"])
       s.add_dependency(%q<yard>, [">= 0"])
+      s.add_dependency(%q<jeweler>, [">= 0"])
     end
   else
-    s.add_dependency(%q<ruote>, [">= 2.1.6"])
+    s.add_dependency(%q<ruote>, [">= 2.1.7"])
     s.add_dependency(%q<dm-core>, [">= 0"])
     s.add_dependency(%q<yard>, [">= 0"])
+    s.add_dependency(%q<jeweler>, [">= 0"])
   end
 end
 
